force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/B2B_Country_Specific_Preference_Setting__c.object-meta.xml
<CustomObject>
    <label>B2B Country Specific Preference Setting</label>
    <nameField>
        <label>B2B Country Specific Preference Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Country Specific Preference Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>