force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Account_Brand__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Brand__c</fullName>
    <description>This field stores the brand for which the country specific preference is applicable.</description>
    <label>B2B Account Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silhouette,evil eye</fullName>
            </value>
            <value>
                <fullName>NEUBAU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>