force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Company_Name__c</fullName>
    <description>This field store the country specific Company Name to be displayed in the footer.</description>
    <inlineHelpText>Add the Name of the Company subsidiary to be displayed on the footer based on Account&apos;s Store Country.
Example : Silhouette International Schmied AG</inlineHelpText>
    <label>B2B Company Name</label>
    <type>TextArea</type>
</CustomField>