force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Company_Opening__c.field-meta.xml
<CustomField>
    <fullName>B2B_Company_Opening__c</fullName>
    <description>This field store the value of the Company Opening.</description>
    <inlineHelpText>Add the company opening time to be displayed on footer.
Example : You can reach us Monday to Friday from 8:30 a.m. to 5:00 p.m</inlineHelpText>
    <label>B2B Company Opening</label>
    <type>TextArea</type>
</CustomField>