force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Customer_Service_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Telephone_Number__c</fullName>
    <description>This field stores the customer service telephone number for the applicable brand as well as country.</description>
    <label>B2B Customer Service Telephone Number</label>
    <type>Phone</type>
</CustomField>