force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Customer_Service_Username__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Username__c</fullName>
    <description>This field stores username of the customer service agent user.</description>
    <label>B2B Customer Service Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>