force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Language__c.field-meta.xml
<CustomField>
    <fullName>B2B_Language__c</fullName>
    <description>This field store the language local key based on which we match the user&apos;s locale key.
Example : &apos;en_US&apos; or &apos;de&apos;</description>
    <inlineHelpText>Select the language locale key based on this the user is shown the translated text on footer once he switched the language.
Example : For German select &apos;de&apos;</inlineHelpText>
    <label>B2B Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>es_MX</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>