force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Terms_And_Conditions__c</fullName>
    <description>This field stores the URL for terms and conditions for the specified country.</description>
    <inlineHelpText>Add the link for T&amp;C to which the user is redirected to when he clicks on Terms &amp; Condition on footer of Partner Portal.
Example : &apos;https://example.com&apos;</inlineHelpText>
    <label>B2B Terms And Conditions</label>
    <type>Url</type>
</CustomField>