force-app/main/default/objects/B2B_Country_Specific_Preference_Setting__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>The type of record whether its for customer service or others.</description>
    <label>B2B Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service Information</fullName>
            </value>
            <value>
                <fullName>Footer Facts with T &amp; C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>